# bayesian_calibration

./: README.md  pyproject.toml
bayesian_calibration/core/: plotter.py  probability_calibration.py
bayesian_calibration/data/: available_priors.py  beta_prior_parameters.py  calibration_output.py
bayesian_calibration/traits/: __init__.py  iterable.py  probability.py
experiments/: posterior_emv_convergence.py  trials_with_multiple_sample_sizes.py
experiments/experiments_results/: multiple_trials.csv
tests/: test_calibration.py  test_plot_prior_posterior.py
