[project]
name = "bayesian-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]
